--- a/src/Spryker/SalesReclamationGui/src/Spryker/Zed/SalesReclamationGui/Presentation/Create/boxes/items.twig
+++ b/src/Spryker/SalesReclamationGui/src/Spryker/Zed/SalesReclamationGui/Presentation/Create/boxes/items.twig
@@ -20,6 +20,7 @@
                 <th colspan="2">{{ 'Product' | trans }}</th>
                 <th>{{ 'Unit Price' | trans }} <small>({{ reclamation.order.priceMode }})</small></th>
                 <th>{{ 'Item total' | trans }}</th>
+                <th>{{ 'State' | trans }}</th>
             </tr>
             </thead>
             {% if order.itemGroups is defined and order.itemGroups | length > 0 %}
