--- a/src/Spryker/SalesReclamation/src/Spryker/Zed/SalesReclamation/Presentation/Detail/boxes/order-item.twig
+++ b/src/Spryker/SalesReclamation/src/Spryker/Zed/SalesReclamation/Presentation/Detail/boxes/order-item.twig
@@ -77,7 +77,7 @@
         {% set label = 'label-danger' %}
     {% endif %}
 
-    <span class="label {{ label }}" title="Deactivated">{{ reclamationItem.status | trans }}</span>
+    <span class="label {{ label }}" title="{{ 'Deactivated' | trans }}">{{ reclamationItem.status | trans }}</span>
 </td>
 <td>
     {% if reclamationItem.status != 'Refunded' %}
@@ -85,7 +85,7 @@
             'id-reclamation': reclamation.idSalesReclamation,
             'id-reclamation-item': reclamationItem.id,
         }) }}"
-           class="btn btn-xs btn-outline btn-view btn-remove"><i class="fa fa-close"></i>Refund
+           class="btn btn-xs btn-outline btn-view btn-remove"><i class="fa fa-close"></i>{{ 'Refund' | trans }}
         </a>
     {% endif %}
 </td>
