--- a/src/Spryker/NavigationGui/src/Spryker/Zed/NavigationGui/Presentation/Update/index.twig
+++ b/src/Spryker/NavigationGui/src/Spryker/Zed/NavigationGui/Presentation/Update/index.twig
@@ -2,7 +2,7 @@
 
 {% set widget_title = 'Navigation element details' %}
 {% block section_title %}
-    {{ 'Edit Navigation Element: ' | trans ~ idNavigation }}
+    {{ 'Edit Navigation Element:' | trans ~ ' ' ~ idNavigation }}
 {% endblock %}
 
 {% block head_title %}
