--- a/src/Spryker/CmsBlockGui/src/Spryker/Zed/CmsBlockGui/Presentation/ViewBlock/index.twig
+++ b/src/Spryker/CmsBlockGui/src/Spryker/Zed/CmsBlockGui/Presentation/ViewBlock/index.twig
@@ -1,6 +1,6 @@
 {% extends '@CmsBlockGui/_layout/layout.twig' %}
 
-{% set widget_title = 'View CMS Block: ' | trans ~ cmsBlock.idCmsBlock %}
+{% set widget_title = 'View CMS Block:' | trans ~ ' ' ~ cmsBlock.idCmsBlock %}
 
 {% block head_title widget_title %}
 {% block section_title widget_title %}
