--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
@@ -1,11 +1,11 @@
-We just informed our purchase team about your subscription!
-You will receive an email when the product will be available again
+{{ 'availability_subscription.mail.subscribed.head'|trans|raw }}
 
-%product-concrete-title-with-right-locale%
-%product-concrete-price-from-right-shop-and-currency%
-%list-of-attributes-in-right-locale%
+{{ mail.productAttributes.name }}
 
-Copyright © current year company name, All rights reserved.
-Want to change how you receive these emails?
-You can&nbsp;unsubscribe from this list.
+{{ mail.productAttributes.price }}
 
+{% for name, value in mail.product.attributes if name %}
+    {{ ('product.attribute.' ~ name) | trans }}: {{ value }}
+{% endfor %}
+
+{{ 'availability_subscription.mail.subscribed.footer'|trans({'%link%':mail.availabilityUnsubscriptionLink})|raw }}
