cc-1777 CR fixes

--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
@@ -1,5 +1,5 @@
 {{ mail.localizedAttributes.name }}
-The wait is over, you can now add this product inside your cart.
+{{ 'The wait is over, you can now add this product inside your cart.' | trans }}
 
 {{ mail.localizedAttributes.name }}
 Attributes:
