--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.text.twig
@@ -1,3 +1,3 @@
-You will not be notified when the product %product-title-with-right-locale% will be available again
+You will not be notified when the product %product-title-with-right-locale% will be available again.
 
 Copyright © current year company name, All rights reserved.
