--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/ListContent/index.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/ListContent/index.twig
@@ -6,9 +6,11 @@
 {% block section_title widget_title %}
 
 {% block action %}
-    {{ groupActionButtons({
-        'Product List': {'url':'/content-gui/create-content', 'title':'Abstract Product list'}
-    },'Add Content Item')}}
+    {% set linksData = {} %}
+    {% for termKey in termKeys %}
+        {% set linksData = linksData | merge({termKey: {'url' : '/content-gui/create-content?term-key='~termKey, 'title' : termKey}}) %}
+    {% endfor %}
+    {{ groupActionButtons(linksData,'Add Content Item')}}
 {% endblock %}
 
 {% block content %}
