--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
@@ -1,5 +1,5 @@
 {{ mail.localizedAttributes.name }}
-{{ 'The wait is over, you can now add this product inside your cart.' | trans }}
+{{ 'You can now add' | trans ~ ' ' ~ mail.localizedAttributes.name ~ ' to your cart again, do not miss this opportunity!' }}
 
 {{ mail.localizedAttributes.name }}
 Attributes:
