cc-2313 fixed link to unsubscribe in email notification

--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
@@ -746,7 +746,7 @@
                                                     <em>Copyright © current year company name, All rights reserved.</em><br>
                                                     <br>
                                                     Want to change how you receive these emails?<br>
-                                                    You can&nbsp;<a href="*|DEFAULT:UNSUB|*" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #656565;font-weight: normal;text-decoration: underline;">unsubscribe from this list</a>.
+                                                    You can&nbsp;<a href="{{ mail.availabilityUnsubscriptionLink }}" style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #656565;font-weight: normal;text-decoration: underline;">unsubscribe from this list</a>.
                                                 </td>
                                             </tr>
                                             </tbody>
