CC-523 Fixed failing tests

--- a/src/Spryker/Category/src/Spryker/Zed/Category/Presentation/_partials/general-tab.twig
+++ b/src/Spryker/Category/src/Spryker/Zed/Category/Presentation/_partials/general-tab.twig
@@ -8,7 +8,8 @@
 
     {% embed '@Gui/Partials/localized-ibox.twig' with {
         localeName: localeName,
-        collapsed: collapsed
+        collapsed: collapsed,
+        id: 'localizedAttributes-ibox-' ~ localeName
     } %}
         {% block content %}
             {{ form_widget(localizedAttributes) }}
