--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/_template/_form-submit.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/_template/_form-submit.twig
@@ -1,1 +1,2 @@
-<input type="submit" id="submit-cms" class="btn btn-create safe-submit" value="{{ 'Save' | trans }}" />
+{{ backActionButton('/content-gui/list-content', 'Back' | trans) }}
+<input type="submit" id="submit-cms" class="btn pull-right btn-create safe-submit" value="{{ 'Save' | trans }}" />
