--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <!-- NAME: 1 COLUMN -->
@@ -625,8 +625,8 @@
                                             <tbody>
                                             <tr>
                                                 <td valign="top" class="mcnTextContent" style="padding-top: 0;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #202020;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">
-                                                    <h2 class="null" style="display: block;margin: 0;padding: 0;color: #202020;font-family: Helvetica;font-size: 22px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;">{{ mail.localizedAttributes.name ~ ' ' ~ 'is available again!' |trans }} </h2>
-                                                    <p style="margin: 10px 0;padding: 0;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #202020;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">{{ 'You can now add' | trans ~ ' ' ~ mail.localizedAttributes.name ~ ' to your cart again, do not miss this opportunity!' | trans }}</p>
+                                                    <h2 class="null" style="display: block;margin: 0;padding: 0;color: #202020;font-family: Helvetica;font-size: 22px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;">{{ mail.productAttributes.name ~ ' ' ~ 'is available again!' |trans }} </h2>
+                                                    <p style="margin: 10px 0;padding: 0;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #202020;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">{{ 'You can now add' | trans ~ ' ' ~ mail.productAttributes.name ~ ' to your cart again, do not miss this opportunity!' | trans }}</p>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -672,12 +672,16 @@
                                             </tr>
                                             <tr>
                                                 <td class="mcnTextContent" valign="top" style="padding: 9px 18px;font-family: Helvetica;font-size: 14px;font-weight: normal;text-align: center;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #202020;line-height: 150%;" width="546">
-                                                    <div style="text-align: left;">{{ mail.localizedAttributes.name }}</div><br>
+                                                    <div style="text-align: left;">{{ mail.productAttributes.name }}</div><br>
                                                         <b>Attributes:</b>&nbsp;
-                                                        {% for key, attribute in mail.localizedAttributes.attributes %}
-                                                            {{ attribute }}
-                                                        {% endfor %}<br>
-                                                        <b>Price:</b>&nbsp;{{ mail.productPrice | money(true, mail.currencyIsoCode) }}<br>
+                                                        {% for name, value in mail.product.attributes %}
+                                                            <p class="col col--sm-12 col--md-6 col--lg-4 col--xl-3">
+                                                                <strong>{{ ('product.attribute.' ~ name) | trans }}</strong><br/>
+                                                                <span>{{ value }}</span>
+                                                            </p>
+                                                        {% endfor %}
+                                                        <br>
+                                                        <b>Price:</b>&nbsp;{{ mail.productAttributes.price }}<br>
                                                 </td>
                                             </tr>
                                             </tbody>
