--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/EditContent/index.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/EditContent/index.twig
@@ -1,11 +1,11 @@
 {% extends '@Gui/Layout/layout.twig' %}
 
 {% if widget_title is not defined %}
-    {% set widget_title = 'Translation details' %}
+    {% set widget_title = 'Edit Content Item' | trans %}
 {% endif %}
 
 {% block head_title widget_title %}
-{% block section_title 'EditContent Item' %}
+{% block section_title 'Edit Content Item: ' | trans ~ contentItemName %}
 
 {% block action %}
     {{ backActionButton('/content-gui/list-content', 'Back to Content Items' | trans) }}
@@ -14,7 +14,7 @@
 {% block content %}
     <div class="col-xs-12 col-md-6">
         <div class="col-xs-12 col-md-12">
-            <h2>Add Abstract Product list</h2>
+            <h2>Update {{ contentItemName }}</h2>
         </div>
         {{ form_start(contentForm, {attr: {novalidate: 'novalidate'}}) }}
         <div class="col-xs-12 col-md-6">
