--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/ListContent/index.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/ListContent/index.twig
@@ -19,7 +19,7 @@
             <h5>{{ 'List of Content Items' | trans }}</h5>
         {%- endblock %}
         {% block widget_content %}
-            {{ contentItems | raw }}
+            {{ contents | raw }}
         {% endblock %}
     {% endembed %}
 {% endblock %}
