--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.text.twig
@@ -1,3 +1,3 @@
-{{ 'You will not be notified when the product ' | trans ~ mail.productAttributes.name ~ ' will be available again.' | trans }}
+{{ 'availability_subscription.mail.unsubscribed.body'|trans({'%name%': mail.productAttributes.name}) }}
 
-Copyright © current year company name, All rights reserved.
+{{ 'availability_subscription.mail.footer'|trans({'%link%': mail.availabilityUnsubscriptionLink})|raw }}
