CC-2461 Check for permissions

--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
@@ -101,7 +101,7 @@
                                 </p>
                             {% endfor %}
                             <br>
-                            {{ mail.productAttributes.price }}
+                            {{ mail.productAttributes.price ?? '' }}
                             <br>
                         </td>
                     </tr>
