--- a/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/_partials/json-data.twig
+++ b/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/_partials/json-data.twig
@@ -1,5 +1,5 @@
 <div style="display: none" id="productAttributesJson">
-    {{ productAttributesJson | e }}
+    {{ productAttributesJson }}
 </div>
 <div style="display: none" id="metaAttributesJson">
     {{ metaAttributesJson | raw }}
