--- a/src/Spryker/Gui/assets/Zed/sass/main.scss
+++ b/src/Spryker/Gui/assets/Zed/sass/main.scss
@@ -4,7 +4,7 @@
  */
 
 // external dependencies
-@import '~jquery-ui-dist/jquery-ui.min.css';
+@import '~jquery-ui/themes/base/all.css';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import '~font-awesome/scss/font-awesome';
 @import '~animate.css/animate';
