--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/CreateContent/index.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/CreateContent/index.twig
@@ -13,21 +13,27 @@
 
 {% block content %}
         {% block widget_content %}
-            <div class="col-xs-12 col-md-6">
-                <div class="col-xs-12 col-md-12">
-                    <h2>Add {{ contentName }}</h2>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="col-xs-12 col-md-12">
+                        <h2>Add {{ contentName }}</h2>
+                    </div>
+                    {{ form_start(contentForm, {attr: {novalidate: 'novalidate'}}) }}
+                        <div class="row">
+                            <div class="col-xs-12 col-md-6">
+                                {{ form_row(contentForm.name) }}
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                {{ form_row(contentForm.description) }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                            {{ tabs(contentTabs, {'contentForm' : contentForm} ) }}
+                            </div>
+                        </div>
+                    {{ form_end(contentForm) }}
                 </div>
-                {{ form_start(contentForm, {attr: {novalidate: 'novalidate'}}) }}
-                <div class="col-xs-12 col-md-6">
-                    {{ form_row(contentForm.name) }}
-                </div>
-                <div class="col-xs-12 col-md-6">
-                    {{ form_row(contentForm.description) }}
-                </div>
-                <div class="col-xs-12 col-md-12">
-                {{ tabs(contentTabs, {'contentForm' : contentForm} ) }}
-                </div>
-                {{ form_end(contentForm) }}
             </div>
         {% endblock %}
 {% endblock %}
