--- a/src/Spryker/Category/src/Spryker/Zed/Category/Presentation/Tree/tree-node.twig
+++ b/src/Spryker/Category/src/Spryker/Zed/Category/Presentation/Tree/tree-node.twig
@@ -32,7 +32,7 @@
         {% endif %}
 
         <a
-            href="/product-category/assign?id-category={{ node.id_category }}"
+            href="{{ path('product-category/assign', {idCategory: node.id_category, idNode: node.id}) }}"
             class="btn btn-xs btn-outline btn-view"
             title="Assign Products to this Category"
         >
