CC-1680 fix CR comments

--- a/src/Spryker/ProductCategory/src/Spryker/Zed/ProductCategory/Presentation/Assign/index.twig
+++ b/src/Spryker/ProductCategory/src/Spryker/Zed/ProductCategory/Presentation/Assign/index.twig
@@ -17,7 +17,11 @@
     {% embed '@Gui/Partials/widget.twig' %}
 
         {% block widget_title %}
-            <h5>{{ 'Assign products to category'  | trans }}: <strong>{{ categoryPath }}</strong></h5>
+            {% if categoryPath is defined and categoryPath is not null %}
+                <h5>{{ 'Assign products to category'  | trans }}: <strong>{{ categoryPath }}</strong></h5>
+            {% else %}
+                <h5>{{ 'Assign products to category'  | trans }}</h5>
+            {% endif %}
         {% endblock %}
 
         {% block widget_content %}
