--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.html.twig
@@ -41,31 +41,33 @@
         </tr>
         </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnButtonBlock"
-           style="min-width: 100%;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-        <tbody class="mcnButtonBlockOuter">
-        <tr>
-            <td style="padding-top: 0;padding-right: 18px;padding-bottom: 18px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"
-                valign="top" align="center" class="mcnButtonBlockInner">
-                <table border="0" cellpadding="0" cellspacing="0" class="mcnButtonContentContainer"
-                       style="border-collapse: separate !important;border-radius: 3px;background-color: #2BAADF;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                    <tbody>
-                    <tr>
-                        <td align="center" valign="middle" class="mcnButtonContent"
-                            style="font-family: Arial;font-size: 16px;padding: 15px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                            <a target="_blank"
-                               class="mcnButton "
-                               title="{{ 'availability_subscription.mail.notification.buy_now'|trans }}"
-                               href="{{ mail.productAttributes.url }}" target="_blank"
-                               style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">{{ 'availability_subscription.mail.notification.buy_now'|trans }}</a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    {% if mail.productAttributes.url is not empty %}
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnButtonBlock"
+               style="min-width: 100%;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+            <tbody class="mcnButtonBlockOuter">
+            <tr>
+                <td style="padding-top: 0;padding-right: 18px;padding-bottom: 18px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;"
+                    valign="top" align="center" class="mcnButtonBlockInner">
+                    <table border="0" cellpadding="0" cellspacing="0" class="mcnButtonContentContainer"
+                           style="border-collapse: separate !important;border-radius: 3px;background-color: #2BAADF;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <tbody>
+                        <tr>
+                            <td align="center" valign="middle" class="mcnButtonContent"
+                                style="font-family: Arial;font-size: 16px;padding: 15px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                <a target="_blank"
+                                   class="mcnButton "
+                                   title="{{ 'availability_subscription.mail.notification.buy_now'|trans }}"
+                                   href="{{ mail.productAttributes.url }}" target="_blank"
+                                   style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">{{ 'availability_subscription.mail.notification.buy_now'|trans }}</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    {% endif %}
     <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageCardBlock"
            style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
         <tbody class="mcnImageCardBlockOuter">
@@ -76,18 +78,20 @@
                        width="100%"
                        style="background-color: #FFFFFF;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
                     <tbody>
-                    <tr>
-                        <td class="mcnImageCardBottomImageContent" align="center" valign="top"
-                            style="padding-top: 0px;padding-right: 0px;padding-bottom: 0;padding-left: 0px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                            <a href="{{ mail.productAttributes.url }}" title="" class="" target="_blank"
-                               style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                <img alt="{{ mail.productAttributes.name }}" src="{{ mail.productAttributes.image }}"
-                                     width="500"
-                                     style="max-width: 500px;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;vertical-align: bottom;"
-                                     class="mcnImage">
-                            </a>
-                        </td>
-                    </tr>
+                    {% if mail.productAttributes.image is not empty %}
+                        <tr>
+                            <td class="mcnImageCardBottomImageContent" align="center" valign="top"
+                                style="padding-top: 0px;padding-right: 0px;padding-bottom: 0;padding-left: 0px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                <a href="{{ mail.productAttributes.url }}" title="" class="" target="_blank"
+                                   style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <img alt="{{ mail.productAttributes.name }}" src="{{ mail.productAttributes.image }}"
+                                         width="500"
+                                         style="max-width: 500px;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;vertical-align: bottom;"
+                                         class="mcnImage">
+                                </a>
+                            </td>
+                        </tr>
+                    {% endif %}
                     <tr>
                         <td class="mcnTextContent" valign="top"
                             style="padding: 9px 18px;font-family: Helvetica;font-size: 14px;font-weight: normal;text-align: center;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #202020;line-height: 150%;"
