--- a/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/_partials/json-data.twig
+++ b/src/Spryker/ProductAttributeGui/src/Spryker/Zed/ProductAttributeGui/Presentation/View/_partials/json-data.twig
@@ -2,8 +2,8 @@
     {{ productAttributesJson }}
 </div>
 <div style="display: none" id="metaAttributesJson">
-    {{ metaAttributesJson | raw }}
+    {{ metaAttributesJson }}
 </div>
 <div style="display: none" id="localesJson">
-    {{ localesJson | raw }}
+    {{ localesJson }}
 </div>
