CMS-177: CMS-178: create clear button for subform

--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/_partial/locale-tab.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/_partial/locale-tab.twig
@@ -8,6 +8,7 @@
             {% else %}
                 {{ form_widget(localizedContentForm.parameters) }}
             {% endif %}
+            <input type="button" data-tab="#{{ localizedContentForm.parameters.vars.id }}" class="btn btn-xl btn-outline  btn-view clear-fields" value="{{ 'Clear' | trans }}" />
         {% endif %}
     {% endfor %}
 {% endblock %}
