--- a/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/CreateContent/index.twig
+++ b/src/Spryker/ContentGui/src/Spryker/Zed/ContentGui/Presentation/CreateContent/index.twig
@@ -35,5 +35,7 @@
                     {{ form_end(contentForm) }}
                 </div>
             </div>
+            <script src="/assets/js/spryker-zed-content-clear.js"></script>
         {% endblock %}
 {% endblock %}
+
