--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.html.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.html.twig
@@ -51,13 +51,13 @@
                        width="100%"
                        style="background-color: #FFFFFF;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
                     <tbody>
-                    {% if mail.productAttributes.url is not empty and mail.productAttributes.image is not empty %}
+                    {% if mail.availabilitySubscriptionMailData.productAttributes.url is not empty and mail.availabilitySubscriptionMailData.productAttributes.image is not empty %}
                         <tr>
                             <td class="mcnImageCardBottomImageContent" align="center" valign="top"
                                 style="padding-top: 0px;padding-right: 0px;padding-bottom: 0;padding-left: 0px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                <a href="{{ mail.productAttributes.url }}" title="" class="" target="_blank"
+                                <a href="{{ mail.availabilitySubscriptionMailData.productAttributes.url }}" title="" class="" target="_blank"
                                    style="mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                    <img alt="{{ mail.productAttributes.name }}" src="{{ mail.productAttributes.image }}"
+                                    <img alt="{{ mail.availabilitySubscriptionMailData.productAttributes.name }}" src="{{ mail.availabilitySubscriptionMailData.productAttributes.image }}"
                                          width="500"
                                          style="max-width: 500px;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;vertical-align: bottom;"
                                          class="mcnImage">
@@ -69,9 +69,9 @@
                         <td class="mcnTextContent" valign="top"
                             style="padding: 9px 18px;font-family: Helvetica;font-size: 14px;font-weight: normal;text-align: center;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #202020;line-height: 150%;"
                             width="546">
-                            <div style="text-align: left;">{{ mail.productAttributes.name }}<br>
-                                {{ mail.productAttributes.price ?? '' }}<br>
-                                {% for name, value in mail.product.attributes %}
+                            <div style="text-align: left;">{{ mail.availabilitySubscriptionMailData.productAttributes.name }}<br>
+                                {{ mail.availabilitySubscriptionMailData.productAttributes.price ?? '' }}<br>
+                                {% for name, value in mail.availabilitySubscriptionMailData.product.attributes %}
                                     <p class="col col--sm-12 col--md-6 col--lg-4 col--xl-3">
                                         <strong>{{ ('product.attribute.' ~ name) | trans }}</strong><br/>
                                         <span>{{ value }}</span>
