--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/unsubscribed.text.twig
@@ -1,3 +1,3 @@
-{{ 'availability_subscription.mail.unsubscribed.body'|trans({'%name%': mail.productAttributes.name}) }}
+{{ 'availability_subscription.mail.unsubscribed.body'|trans({'%name%': mail.availabilitySubscriptionMailData.productAttributes.name}) }}
 
-{{ 'availability_subscription.mail.footer'|trans({'%link%': mail.availabilityUnsubscriptionLink})|raw }}
+{{ 'availability_subscription.mail.footer'|trans({'%link%': mail.availabilitySubscriptionMailData.availabilityUnsubscriptionLink})|raw }}
