--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
@@ -1,12 +1,12 @@
-{{ 'availability_subscription.mail.notification.head'|trans({'%name%': mail.productAttributes.name}) }}
-{{ 'availability_subscription.mail.notification.body'|trans({'%name%': mail.productAttributes.name}) }}
+{{ 'availability_subscription.mail.notification.head'|trans({'%name%': mail.availabilitySubscriptionMailData.productAttributes.name}) }}
+{{ 'availability_subscription.mail.notification.body'|trans({'%name%': mail.availabilitySubscriptionMailData.productAttributes.name}) }}
 
-{{ mail.productAttributes.name }}
+{{ mail.availabilitySubscriptionMailData.productAttributes.name }}
 
-{% for name, value in mail.product.attributes if name %}
+{% for name, value in mail.availabilitySubscriptionMailData.product.attributes if name %}
     {{ ('product.attribute.' ~ name) | trans }}: {{ value }}
 {% endfor %}
 
-{{ mail.productAttributes.price ?? '' }}
+{{ mail.availabilitySubscriptionMailData.productAttributes.price ?? '' }}
 
-{{ 'availability_subscription.mail.footer'|trans({'%link%': mail.availabilityUnsubscriptionLink})|raw }}
+{{ 'availability_subscription.mail.footer'|trans({'%link%': mail.availabilitySubscriptionMailData.availabilityUnsubscriptionLink})|raw }}
