--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/notification.text.twig
@@ -3,7 +3,7 @@
 
 {{ mail.availabilitySubscriptionMailData.productAttributes.name }}
 
-{% for name, value in mail.availabilitySubscriptionMailData.product.attributes if name %}
+{% for name, value in mail.availabilitySubscriptionMailData.productConcrete.attributes if name %}
     {{ ('product.attribute.' ~ name) | trans }}: {{ value }}
 {% endfor %}
 
