--- a/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
+++ b/src/Spryker/AvailabilityNotification/src/Spryker/Zed/AvailabilityNotification/Presentation/Mail/subscribed.text.twig
@@ -4,7 +4,7 @@
 
 {{ mail.availabilitySubscriptionMailData.productAttributes.price ?? '' }}
 
-{% for name, value in mail.availabilitySubscriptionMailData.product.attributes if name %}
+{% for name, value in mail.availabilitySubscriptionMailData.productConcrete.attributes if name %}
     {{ ('product.attribute.' ~ name) | trans }}: {{ value }}
 {% endfor %}
 
